hphp/test/zend/good/ext/readline/tests/readline_write_history_001.php.skipif
<?php if (!extension_loaded("readline") || !function_exists('readline_add_history')) die("skip");
if (READLINE_LIB == "libedit") die("skip readline only");
?>