hphp/test/zend/bad/Zend/tests/bug54547.php.skipif
<?php
if (PHP_INT_MAX !== 9223372036854775807)
	die("skip for 64-bit long systems only");